Remove kotlin toolchain debugging