@@ -41,21 +41,6 @@ tasks.withType<KotlinCompile>().configureEach {
       "-Werror",
       "-Xopt-in=kotlin.ExperimentalStdlibApi"
     )
-
-    println("Adding args to $name")
-    kotlinJavaToolchain.toolchain.use(javaToolchains.launcherFor { languageVersion.set(JavaLanguageVersion.of(11)) })
-    kotlinDaemonJvmArguments.addAll(
-      "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-      "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-      "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-      "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-      "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
-      "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-      "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-      "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-      "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-      "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
-    )
   }
 }
 
